<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kaixinwa_android</string>
    <string name="action_settings">Settings</string>
    <string name="faxian">答案</string>
    <string name="wode">发现</string>
    <string name="da">我的</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="xiaoshu">开心蛙答案</string>
    <string name="grade">显示年级</string>
    <string name="baocun">保存</string>
    <string name="saoyisao">扫一扫</string>
    <string name="up_one_level">..(返回上一级目录)</string>
    <string name="current_dir">.(刷新)</string>
    <string name="zhuce">注册</string>
    <string name="my">我</string>
    <string name="loginanniu">登陆</string>
    <string name="inputpassword">输入密码</string>
    <string name="inputphonenum">输入手机号</string>
    <string name="formima">忘记密码？</string>
    <string name="lijizhuce">立即注册</string>
    <string name="logintitle">登录开心蛙</string>
    <string name="happystore">开心商城</string>
    <string name="address">国粹苑C座4层D11</string>
    <string name="name_name">夜风</string>
    <string name="mood">今天心情不错</string>
    <string name="yongyou">您目前拥有：</string>
    <string name="kaixindoushuliang">50</string>
    <string name="my_mission">我的任务</string>
    <string name="my_share">我的分享</string>
    <string name="my_goods">我的商品</string>
    <string name="my_code">填写邀请码</string>
    <string name="friends">邀请好友</string>
    <string name="my_message">我的消息</string>
    <string name="my_setup">个性设置</string>
    <string name="system_setup">系统设置</string>
    <string name="message_push">消息推送提醒</string>
    <string name="account_security">账户与安全</string>
    <string name="headpic">头像</string>
    <string name="set_headpic">编辑头像</string>
    <string name="nicheng">昵称</string>
    <string name="qianming">个性签名</string>
    <string name="weibangding">未绑定</string>
    <string name="bangdingweixin">绑定微信</string>
    <string name="qq">122222344</string>
    <string name="bangdingqq">绑定QQ</string>
    <string name="my_address">我的地址</string>
    <string name="school">史家小学</string>
    <string name="my_school">学校信息</string>
    <string name="daily_attendance">每日签到</string>
    <string name="share_kaixinwa">分享开心蛙</string>
    <string name="invite_friends">邀请好友</string>
    <string name="xiaozhishi">去开心小知堂学习</string>
    <string name="information">注册信息</string>
    <string name="school_information">修改学校信息</string>
    <string name="revise_headpic">修改头像</string>
    <string name="day">16</string>
    <string name="month">5月</string>
    <string name="share_neirong">今天是个好日子呀，全国人民万岁九月份教育局月份合同的海景房</string>
    <string name="you_code">你的邀请码:</string>
    <string name="code">12345</string>
    <string name="text1">每邀请一位好友即可获得5开心豆</string>
    <string name="text2">好友下载开心答案并输出邀请码可再获10开心豆</string>
    <string name="QQ">QQ</string>
    <string name="weixin">微信</string>
     <string name="weixin_number">微信号</string>
    <string name="weibo">微博</string>
    <string name="write_name">请填写昵称</string>
    <string name="sure">完成</string>
    <string name="about_answer">关于开心蛙答案</string>
    <string name="new_version">检查新版本</string>
    <string name="quit">退出</string>
    <string name="account">账号</string>
    <string name="password_change">密码修改</string>
     <string name="new_password">输入新密码</string>
      <string name="sure_password">确认新密码</string>
      <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    

</resources>