<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F8F8"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_title" >

        <ImageButton
            android:id="@+id/setup_return_imgbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/wangjimimaback"
            android:contentDescription="@string/app_name" />

        <ImageButton
            android:id="@+id/setup_imgbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/my_set"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/mysetup_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:text="@string/my_setup"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setup_headpic"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:background="@drawable/my_code_bg" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="27dp"
            android:background="@drawable/headpic_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="58dp"
            android:text="@string/headpic"
            android:textSize="18sp" />

        

        <ImageView
            android:id="@+id/setup_headpic_imgview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:background="@drawable/my_touxiang"
            android:contentDescription="@string/app_name" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:background="@drawable/xiaozhishi_bg" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="27dp"
            android:background="@drawable/name_bg" />


        <TextView
            android:id="@+id/setup_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:text="@string/name_name"
            android:textColor="#A4A4A4" />

        <TextView
            android:id="@+id/name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="58dp"
            android:text="@string/nicheng"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setup_mood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:background="@drawable/xiaozhishi_bg" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mood_bg" />


        <TextView
            android:id="@+id/setup_mood_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:text="@string/mood"
            android:textColor="#A4A4A4" />

        <TextView
            android:id="@+id/mood_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="58dp"
            android:text="@string/qianming"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setup_weixin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:background="@drawable/xiaozhishi_bg" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bangdingweixin_bg" />


        <TextView
            android:id="@+id/setup_weixin_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:text="@string/weibangding"
            android:textColor="#A4A4A4" />

        <TextView
            android:id="@+id/weixin_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="58dp"
            android:text="@string/bangdingweixin"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setup_qq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:background="@drawable/xiaozhishi_bg" >

        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="27dp"
            android:background="@drawable/bangdingqq_bg" />
            

        <TextView
            android:id="@+id/setup_qq_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:text="@string/qq"
            android:textColor="#A4A4A4" />

        <TextView
            android:id="@+id/qq_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="58dp"
            android:text="@string/bangdingqq"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setup_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_friends_bg" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/address_bg" />


        <TextView
            android:id="@+id/setup_address_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:text="@string/address"
            android:textColor="#A4A4A4" />

        <TextView
            android:id="@+id/address_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="58dp"
            android:text="@string/my_address"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setup_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:background="@drawable/xiaozhishi_bg" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="27dp"
            android:background="@drawable/school_bg" />


        <TextView
            android:id="@+id/setup_school_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:text="@string/school"
            android:textColor="#A4A4A4" />

        <TextView
            android:id="@+id/school_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="58dp"
            android:text="@string/my_school"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>