<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/logintitbg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/logintitle"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/phoneshuru" >

            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:ems="10"
                android:hint="@string/inputphonenum"
                android:maxLength="11"
                android:numeric="integer"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shurumimakuangbg" >
 
            <EditText
                android:id="@+id/passw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:ems="10"
                android:hint="@string/inputpassword"
                android:password="true"
                android:singleLine="true" >
            </EditText>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/dengluanniu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logindenglu"
            android:text="@string/loginanniu"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/zhucebutton"
               
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="33dp"
                android:text="@string/lijizhuce"
                 />

            <TextView
                 android:id="@+id/forgetmima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                
                android:layout_alignParentTop="true"
                android:layout_marginLeft="33dp"
                android:text="@string/formima"
                 />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>